使用 Colaboratory 建立

--- a/期末實作_統計一A_鄭凱鴻_410650583.ipynb
+++ b/期末實作_統計一A_鄭凱鴻_410650583.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Epjrt_88DkpR",
         "colab": {
@@ -109,7 +109,7 @@
         "id": "7uTJgzOKx6o_",
         "outputId": "ad707241-4fd7-4ddf-bd5e-025a3a4525c0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,19 +139,19 @@
     {
       "cell_type": "code",
       "source": [
-        "x=int(input('請輸入月份:'))\n",
-        "y=int(input('請輸入日期:'))\n",
-        "z=int(input('請輸入今天是星期幾:'))\n",
-        "print('今天是:',x,'月,',y,'號,','星期',z)"
+        "month=int(input('請輸入月份:'))\n",
+        "day=int(input('請輸入日期:'))\n",
+        "week=(input('請輸入今天是星期幾:'))\n",
+        "print('今天是:',month,'月,',day,'號,','星期',week,sep='')"
       ],
       "metadata": {
         "id": "5hd0XifGJlnF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13c6c47f-1053-4d14-cfb6-3b447c89239c"
+        "outputId": "d45c6111-3fe7-4262-d6bd-011f4f12f66a"
       },
-      "execution_count": 57,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,8 +159,8 @@
           "text": [
             "請輸入月份:1\n",
             "請輸入日期:1\n",
-            "請輸入今天是星期幾:2\n",
-            "今天是: 1 月, 1 號, 星期 2\n"
+            "請輸入今天是星期幾:二\n",
+            "今天是:1月,1號,星期二\n"
           ]
         }
       ]
@@ -217,7 +217,7 @@
         },
         "outputId": "a245b40a-9540-48af-e93f-08371fe8577c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +260,7 @@
         },
         "outputId": "7c8532a0-f2e8-4aae-b79e-909200918b92"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +311,7 @@
         },
         "outputId": "05c33bcc-11fb-4c07-cf6a-58430735cd0a"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
         },
         "outputId": "bfe0627b-a291-4639-94e9-9410ff7ea881"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +394,7 @@
         },
         "outputId": "271f5355-4312-443d-918a-396f5078401f"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
